--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body {
     background: #F0F1F5;
 }
 .container {
-    max-width: 380px;
+    max-width: 1200px;
     margin: auto;
 }
 /* Header Styles */
@@ -28,9 +28,10 @@ header h1 {
 /* Main Styles */
 
 .cards {
-    width: min(90vw, 900px);
+    width: min(90vw, 1200px);
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
     gap: 20px;
     margin: -3rem auto;
 }
@@ -45,19 +46,32 @@ header h1 {
 }
 
 .incoming {
+    width: 380px;
     background: #fff;
     padding: 1.25rem;
     border-radius: 0.25rem;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+
 }
+
+.incoming p {
+    color: #0E3400;
+}
+
 .expenses {
+    width: 380px;
     background: #fff;
     padding: 1.25rem;
     border-radius: 0.25rem;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
+.expenses p {
+    color:#530000;
+}
+
 .total {
+    width: 380px;
     background: #379514;
     color: #fff;
     padding: 1.25rem;
@@ -65,6 +79,70 @@ header h1 {
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
+.text-incoming {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 1rem;
+}
+
+.text-expenses {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 1rem;
+}
+.text-total {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 1rem;
+}
+
 #balance {
     margin-top: 8rem;
+}
+
+#data-table {
+ width: 100%;
+ border-spacing: 0 0.5rem;
+ text-align: left;
+}
+table th {
+    font-weight: normal;
+    color: #666666;
+    font-size: 0.8rem;
+    padding: 0 .8rem 0 .8rem;
+}
+
+table td {
+    padding: .8rem .8rem;
+    background-color: #fff;
+
+}
+
+table tr {
+    opacity: .6;
+}
+
+table tr:hover{
+    opacity: 1;
+}
+
+td.descript {
+    color: #3D3D3D;
+}
+td.positive {
+    color: #1E6703;
+}
+td.negative {
+    color: #C30B0B;
+}
+
+td.data {
+    color: #A3A3A3;
+}
+
+/*Footer styles*/
+footer p { 
+    margin: 80px;
+    text-align: center;
+    color: #A3A3A3;
 }
