--- a/styles.css
+++ b/styles.css
@@ -115,7 +115,7 @@ table th {
 table td {
     padding: .8rem .8rem;
     background-color: #fff;
-
+    border-radius: 0.25rem;
 }
 
 table tr {
@@ -145,4 +145,89 @@ footer p {
     margin: 80px;
     text-align: center;
     color: #A3A3A3;
+}
+
+/* Modal Styles*/
+
+.container-modal {
+    width: 100vw;
+    height: 100vh;
+    background:rgba(0, 0, 0, 0.521);
+    position: absolute;
+    z-index: 2;
+}
+
+.modal {
+    max-width: 600px;
+    padding: 30px 20px;
+    position: absolute;
+    background: #F0F1F5;
+    top: 30%;
+    left: 30%;
+    z-index: 10;
+    border-radius: 4px;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+
+.modal h2 {
+    font-size: 1.5rem;
+    font-weight:normal;
+    margin-bottom: 10px;
+}
+
+.modal p{
+    font-size: .8rem;
+}
+
+.input-modal input {
+    display: flex;
+    width: 100%;
+    max-width: 560px;
+    margin-bottom: 10px;
+    height: 52px;
+    padding: 20px 10px;
+    border: none;
+}
+
+.input-modal input::placeholder {
+    font-size:1rem;
+}
+
+.select-data{
+    margin-top: 20px;
+}
+
+.select-data::placeholder{
+    font-family: "Poppins", sans-serif;
+}
+
+.btns-modal {
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 20px;
+}
+
+.btn-cancel {
+    padding: 20px 0;
+    background: none;
+    border: 2px solid #C30B0B;
+    border-radius: 4px;
+    text-transform:uppercase;
+    font-size:1rem;
+    color: #C30B0B;
+    cursor: pointer;
+    width:180px;
+    text-align: center;
+}
+
+.btn-salve {
+    padding: 20px 0;
+    background: #379514;
+    border: none;
+    border-radius: 4px;
+    text-transform:uppercase;
+    font-size: 1rem;
+    color: #fff;
+    cursor: pointer;
+    width:180px;
 }
