--- a/styles.css
+++ b/styles.css
@@ -9,10 +9,12 @@ body {
     font-family: 'Poppins', sans-serif;
     background: #F0F1F5;
 }
+
 .container {
     max-width: 1200px;
-    margin: auto;
+    margin: 0 auto;
 }
+
 /* Header Styles */
 
 header {
@@ -30,7 +32,9 @@ header h1 {
 .cards {
     width: min(90vw, 1200px);
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
+    align-self: center;
     flex-wrap: wrap;
     gap: 20px;
     margin: -3rem auto;
@@ -105,6 +109,7 @@ header h1 {
  border-spacing: 0 0.5rem;
  text-align: left;
 }
+
 table th {
     font-weight: normal;
     color: #666666;
@@ -141,6 +146,7 @@ td.data {
 }
 
 /*Footer styles*/
+
 footer p { 
     margin: 80px;
     text-align: center;
@@ -152,21 +158,21 @@ footer p {
 .container-modal {
     width: 100vw;
     height: 100vh;
-    background:rgba(0, 0, 0, 0.521);
+    max-width:100%;
+    background:rgba(0, 0, 0, 0.7);
     position: absolute;
-    z-index: 2;
+    z-index: 50;
 }
 
 .modal {
-    max-width: 600px;
-    padding: 30px 20px;
     position: absolute;
+    top: 25%;
+    left: 35%;
+    padding: 30px 20px;
     background: #F0F1F5;
-    top: 30%;
-    left: 30%;
-    z-index: 10;
+    z-index: 100;
     border-radius: 4px;
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.932));
 }
 
 .modal h2 {
