--- a/styles.css
+++ b/styles.css
@@ -57,8 +57,12 @@ body {
     width:180px;
     text-align: center;
     text-decoration: none;
+    opacity: 0.6;
 }
 
+.btn-cancel:hover{
+    opacity: 1;
+}
 .btn-salve {
     padding: 20px 0;
     background: var(--green);
@@ -69,6 +73,11 @@ body {
     color: #fff;
     cursor: pointer;
     width:180px;
+    border: 2px solid var(--green);
+}
+
+.btn-salve:hover{
+    background: var(--light-green)
 }
 
 /* Header Styles */
@@ -166,6 +175,16 @@ header h1 {
  text-align: left;
 }
 
+#data-table {
+    padding: 0 .8rem 0 .8rem;
+}
+
+thead tr th{
+    padding: .5rem;
+    border-radius: 0.25rem;
+    background-color: #F0F1F5;
+}
+
 table th {
     font-weight: normal;
     color: #666666;
@@ -173,14 +192,13 @@ table th {
     padding: 0 .8rem 0 .8rem;
 }
 
-table td {
-    padding: .8rem .8rem;
+table tr {
     background-color: #fff;
-    border-radius: 0.25rem;
+    opacity: .6;
 }
 
-table tr {
-    opacity: .6;
+table td {
+    padding: .8rem .8rem;
 }
 
 table tr:hover{
@@ -201,94 +219,8 @@ td.data {
     color: #A3A3A3;
 }
 
-/* Modal Styles*/
 
-/* .container-modal {
-    width: 100vw;
-    height: 100vh;
-    max-width:100%;
-    background:rgba(0, 0, 0, 0.7);
-    position: absolute;
-    z-index: 50;
-    display: none;
-}
-
-.modal {
-    position: absolute;
-    top: 25%;
-    left: 35%;
-    padding: 30px 20px;
-    background: #F0F1F5;
-    z-index: 100;
-    border-radius: 4px;
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.932));
-}
-
-.modal h2 {
-    font-size: 1.5rem;
-    font-weight:normal;
-    margin-bottom: 10px;
-}
-
-.modal p{
-    font-size: .8rem;
-}
-
-.input-modal input {
-    display: flex;
-    width: 100%;
-    max-width: 560px;
-    margin-bottom: 10px;
-    height: 52px;
-    padding: 20px 10px;
-    border: none;
-}
-
-.input-modal input::placeholder {
-    font-size:1rem;
-}
-
-.select-data{
-    margin-top: 20px;
-}
-
-.select-data::placeholder{
-    font-family: "Poppins", sans-serif;
-}
-
-.btns-modal {
-    display: flex;
-    justify-content: space-evenly;
-    margin-top: 20px;
-}
-
-.btn-cancel {
-    padding: 20px 0;
-    background: none;
-    border: 2px solid #C30B0B;
-    border-radius: 4px;
-    text-transform:uppercase;
-    font-size:1rem;
-    color: #C30B0B;
-    cursor: pointer;
-    width:180px;
-    text-align: center;
-}
-
-.btn-salve {
-    padding: 20px 0;
-    background: var(--green);
-    border: none;
-    border-radius: 4px;
-    text-transform:uppercase;
-    font-size: 1rem;
-    color: #fff;
-    cursor: pointer;
-    width:180px;
-} */
-
-
-/* New Modal Style */
+/* Modal Style */
 
 .modal-overlay {
     background-color: rgba(0, 0, 0, 0.7);
