--- a/styles.css
+++ b/styles.css
@@ -83,7 +83,7 @@ body {
 /* Header Styles */
 
 header {
-    background: #2C4A22;
+    background: #0F2408;
 }
 
 header h1 {
@@ -147,6 +147,10 @@ header h1 {
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
+.total.totalnegative {
+    background: var(--red);
+}
+
 .text-incoming {
     display: flex;
     justify-content: space-between;
@@ -193,8 +197,12 @@ table th {
 }
 
 table tr {
+    vertical-align: middle;
     background-color: #fff;
     opacity: .6;
+}
+table tbody tr td img {
+    vertical-align: middle;
 }
 
 table td {
@@ -219,6 +227,9 @@ td.data {
     color: #A3A3A3;
 }
 
+#data-table tbody img {
+    cursor: pointer;
+}
 
 /* Modal Style */
 
