--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,16 @@
     box-sizing: border-box;
 }
 
+input[type=number]::-webkit-inner-spin-button { 
+    -webkit-appearance: none;
+    
+}
+input[type=number] { 
+   -moz-appearance: textfield;
+   appearance: textfield;
+
+}
+
 body {
     font-family: 'Poppins', sans-serif;
     background: #F0F1F5;
